--- a/style.css
+++ b/style.css
@@ -8,14 +8,17 @@
 body{
     background-color: #222;
 }
+.blure{
+    background-color: #004042;
+    padding-top: 50px;
+    padding-bottom: 245px;
+}
 .container{
-    position: absolute;
-    top: 100px;
-    left: 300px;
-    right: 300px;
+    margin: auto;
+    margin-top: 100px;
     background-color: #006064;
     height: 600px;
-    width: auto;
+    width: 678px;
     /* border-radius: 20px; */
 }
 label{
@@ -24,7 +27,7 @@ label{
 }
 h2{
     text-align: center;
-    padding: 6px;
+    padding: 12px;
 }
 .inputs-text{
     text-align: left;
@@ -46,4 +49,53 @@ h2{
     display: grid;
     grid-template-columns: repeat(3 , 1fr);
     grid-template-rows: 1fr;
+}
+#submit{
+    padding: 8px 12px;
+    color: #fff;
+    background-color: #222;
+    border: 1px solid #222;
+    font-size: 1.5rem;
+    cursor: pointer;
+    border-radius: 5px;
+}
+.select{
+    padding: 8px 12px;
+    color: #fff;
+    background-color: #222;
+    border: 1px solid #222;
+    cursor: pointer;
+    font-size: 1.5rem;
+    border-radius: 5px;
+    
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+}
+.select option{
+    background-color: #222;
+}
+.select option:hover, .select option:focus{
+    background-color: #222;
+    color: #fff;
+}
+.select:focus, .select:hover{
+    outline: none;
+    border: 1px solid #212121;
+}
+.wynik{
+    position: relative;
+    display: block;
+    text-align: center;
+}
+.wynik div{
+    padding: 0;
+}
+.wynik-child{
+    position: absolute;
+    top: 50%;
+    padding: 0;
+    margin: 0;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
 }
