--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 *{
     padding: 0;
     margin: 0;
@@ -9,17 +10,18 @@ body{
     background-color: #222;
 }
 .blure{
-    background-color: #004042;
+    background-color: #494949;
     padding-top: 50px;
     padding-bottom: 245px;
 }
 .container{
+    backface-visibility: hidden;
     margin: auto;
     margin-top: 100px;
-    background-color: #006064;
+    background-color: #757575;
+    -webkit-font-smoothing: antialiased;
     height: 600px;
     width: 678px;
-    /* border-radius: 20px; */
 }
 label{
     padding: 15px;
@@ -34,7 +36,7 @@ h2{
 }
 .inputs-text div{    
     padding: 20px;
-    background-color: #00838f;
+    background-color: #cfcfcf;
 }
 .inputs-text input{
     text-align: center;
@@ -51,12 +53,12 @@ h2{
     grid-template-rows: 1fr;
 }
 #wynik , #wynik2{
-    background-color: #028d92;
+    background-color: #a4a4a4;
     padding: 10px;
     border: 1px solid black;
     margin: 5px;
 }
-#submit , #button-submit{
+#submit , #button-submit ,#reset{
     padding: 8px 12px;
     color: #fff;
     background-color: #222;
@@ -94,17 +96,22 @@ h2{
 }
 .wynik{
     position: relative;
-    display: block;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2 , 1fr);
     text-align: center;
 }
 .wynik div{
     padding: 0;
 }
 .wynik-child{
-    position: absolute;
-    top: 50%;
     padding: 0;
     margin: 0;
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
+}
+#wyniki{
+    margin: 0 5px;
+    margin-top: 5px;
+    background-color: #a4a4a4;
+    padding: 2px;
+
 }
